# krakend-keycloak-example

./: LICENSE  README.md  compose.yaml
config/keycloak/: seasonist-realm.json  seasonist-users-0.json
config/krakend/: krakend.json
simple-api/: Cargo.toml  Dockerfile
simple-api/src/: lib.rs  main.rs
